# Math-Extention

./: .gitignore  README.md  math-ideas-inquiry  pypi_upload_example.bat  pyproject.toml  test.py
math_extension/: __init__.py  core.py  utils.py
math_extension/_internal/: core.py  core.pyi  utils.py
math_extention/: core.py
math_extention/_internal/: core.py  core.pyi
tests/: test_symbolic.py
